--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/leaflet": "^1.9.21",
+    "@vercel/kv": "^3.0.0",
     "leaflet": "^1.9.4",
     "next": "^15.1.0",
     "next-auth": "^5.0.0-beta.30",
