--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.2",
+    "@prisma/client": "^7.2.0",
     "@types/leaflet": "^1.9.21",
-    "@vercel/kv": "^3.0.0",
     "leaflet": "^1.9.4",
     "next": "^15.1.0",
     "next-auth": "^5.0.0-beta.30",
@@ -25,8 +26,10 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "15.1.0",
+    "prisma": "^7.2.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
