Add Capacitor for Android app support
- Install @capacitor/core, @capacitor/cli, @capacitor/android
- Initialize Capacitor with app ID com.girandola.app
- Add conditional static export in next.config.ts (CAPACITOR_BUILD env)
- Add static-build script to package.json
- Add android/ and ios/ to .gitignore
- Document Capacitor setup in dev.md (Task 14)

--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "static-build": "next build && npx cap copy"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
+    "@capacitor/android": "^8.0.1",
+    "@capacitor/cli": "^7.4.5",
+    "@capacitor/core": "^8.0.1",
     "@neondatabase/serverless": "^1.0.2",
     "@prisma/adapter-neon": "^7.2.0",
     "@prisma/client": "^7.2.0",
