--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ws": "^8.19.0"
   },
   "devDependencies": {
+    "@capacitor/assets": "^3.0.5",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
